# pcatk

./: .gitignore  .gitmodules  Cargo.toml  MANIFEST.in  README  pcatk.desktop  pcatk.py  pcatk_editor.desktop  pcatk_editor.py  pcatk_palette.desktop  pcatk_palette.py  pcatk_win_post_install.py  rpm_post_install.script  setup.cfg  setup.py  win_post_install.py
data/: atelier-interactive_acrylic.json  ideal.tsd  ideal_paints.json
data/WaterColour/: DS-watercolour.json
data/legacy/: artisan-cc.def  ideal.tsd  ideal_paints.json
pcatk/: __init__.py  actions.py  analyser.py  apaint.py  data.py  editor.py  gpaint.py  gtkpwx.py  i18n.py  icons.py  iview.py  options.py  paint.py  palette.py  pixbuf.py  printer.py  recollect.py  rgbh.py  tlview.py  untitled  untitled.py  utils.py
pcatk_pkg/: analyser.py  dummy.py  main_window.py  palette.py
pixmaps/: pcatk.xcf  pcatk.xpm
src/: config.rs  icon.rs  main.rs  pcatk.rs
