[package]
name = "pcatk_rs"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour_math = { git = "https://github.com/pwil3058/rs_colour_math.git" }
#colour_math = { path = "../rs_colour_math/colour_math" }
#pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
pw_gtk_ext = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
#pw_gtk_ext = { path = "../rs_pw_gix/pw_gtk_ext" }
pw_pathux = { git = "https://github.com/pwil3058/rs_pw_pathux" }

[dependencies.apaint_gtk]
git = "https://github.com/pwil3058/rs_apaint.git"
#path = "../rs_apaint/apaint_gtk"
#version = "*"
#path = "/home/peter/SRC/GITHUB/RUST/CRATES/rs_apaint.git/apaint_gtk"
features = ["palette_samples"]
